mix_compile.log
Compiling 3 files (.ex)
Compiling crate zenohex_nif in release mode (native/zenohex_nif)
   Compiling zenohex_nif v0.3.2 (/Users/takasehideki/research/zenoh/zenohex/native/zenohex_nif)
error[E0599]: no method named `encoding` found for reference `&ZBytes` in the current scope
  --> src/value.rs:12:21
   |
12 |         match value.encoding() {
   |                     ^^^^^^^^ method not found in `&ZBytes`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `zenohex_nif` (lib) due to 1 previous error

== Compilation error in file lib/zenohex/nif.ex ==
** (RuntimeError) Rust NIF compile error (rustc exit code 101)
    (rustler 0.34.0) lib/rustler/compiler.ex:36: Rustler.Compiler.compile_crate/3
    lib/zenohex/nif.ex:8: (module)
